--- a/YDev.Admin/Views/Login/Index.cshtml
+++ b/YDev.Admin/Views/Login/Index.cshtml
@@ -14,9 +14,9 @@
         <div class="col-md-6 login-container bs-reset mt-login-5-bsfix">
             <div class="login-content">
                 <div class="input-group col-sm-12">
-                    <img height="250" width="350" src="~/logo.png">
+                    <img height="200" width="300" src="~/logo.png">
                 </div>
-                <form action="/Login" class="form-horizontal" method="post">
+                <form action="javascript:;" id="girisForm" class="form-horizontal" method="post">
                     <div class="alert alert-danger display-hide">
                         <button class="close" data-close="alert"></button>
                         <span>E-posta veya şifre giriniz. </span>
@@ -29,7 +29,7 @@
                                     <span class="input-group-addon">
                                         <i class="fa fa-envelope"></i>
                                     </span>
-                                    <input type="email" class="form-control" placeholder="E-posta" name="email" required>
+                                    <input type="email" class="form-control" placeholder="E-posta" id="email" name="email" required>
                                 </div>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                     <span class="input-group-addon">
                                         <i class="fa fa-key"></i>
                                     </span>
-                                    <input type="password" class="form-control" placeholder="Şifre" name="password" required>
+                                    <input type="password" class="form-control" placeholder="Şifre" id="password" name="password" required>
                                 </div>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
 
                         </div>
                         <div class="col-sm-6 text-right">
-                            <button class="btn green" type="submit">Giriş Yap</button>
+                            <button class="btn green" id="btn_login" type="submit">Giriş Yap</button>
                         </div>
                     </div>
                 </form>
