--- a/YDev.Admin/Views/Shared/_LayoutLogin.cshtml
+++ b/YDev.Admin/Views/Shared/_LayoutLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
 
     <meta charset="utf-8" />
@@ -18,6 +18,7 @@
     <!-- BEGIN PAGE LEVEL PLUGINS -->
     <link href="~/assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/assets/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css" />
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="~/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
@@ -40,17 +41,15 @@
     <script src="~/assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
-    <!-- BEGIN PAGE LEVEL PLUGINS -->
+   
     <script src="~/assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/backstretch/jquery.backstretch.min.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL PLUGINS -->
-    <!-- BEGIN THEME GLOBAL SCRIPTS -->
+    <script src="~/assets/global/plugins/bootstrap-toastr/toastr.min.js" type="text/javascript"></script>
+    
     <script src="~/assets/global/scripts/app.min.js" type="text/javascript"></script>
-    <!-- END THEME GLOBAL SCRIPTS -->
-    <!-- BEGIN PAGE LEVEL SCRIPTS -->
-    <script src="~/assets/pages/scripts/login-5.min.js" type="text/javascript"></script>
+   
+    <script src="~/assets/pages/scripts/login-5.min.js" charset="utf-8" type="text/javascript"></script>
 </body>
 </html>
