admin menüler controller viewler düzenlendi

--- a/YDev.Admin/Views/Ayarlar/Index.cshtml
+++ b/YDev.Admin/Views/Ayarlar/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "İhtiyaç Evim";
+    ViewData["Title"] = "Ayarlar";
 }
 
 <!-- BEGIN CONTENT -->
@@ -11,18 +11,14 @@
             <!-- BEGIN PAGE TITLE -->
             <div class="page-title">
                 <h1>
-                    Ana Sayfa
-                    <small>istatistikler, grafikler, bildirimler, raporlar</small>
+                    @ViewData["Title"]
+                    <small>genel ayarları kontrol et</small>
                 </h1>
             </div>
             <!-- END PAGE TITLE -->
-           
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BASE CONTENT -->
-
-
-
         <!-- END PAGE BASE CONTENT -->
     </div>
     <!-- END CONTENT BODY -->
