--- a/YDev.Admin/Views/Menu/Index.cshtml
+++ b/YDev.Admin/Views/Menu/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@{
-    ViewData["Title"] = "İhtiyaç Evim";
+@{
+    ViewData["Title"] = "Menü Yönetimi";
 }
 
 <!-- BEGIN CONTENT -->
@@ -11,12 +11,11 @@
             <!-- BEGIN PAGE TITLE -->
             <div class="page-title">
                 <h1>
-                    Ana Sayfa
-                    <small>istatistikler, grafikler, bildirimler, raporlar</small>
+                    @ViewData["Title"]
+                    <small>menü ekle, düzenle, tasarla</small>
                 </h1>
             </div>
             <!-- END PAGE TITLE -->
-           
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BASE CONTENT -->
