--- a/YDev.Admin/Views/Shared/_LayoutLogin.cshtml
+++ b/YDev.Admin/Views/Shared/_LayoutLogin.cshtml
@@ -3,7 +3,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>@ViewData["Title"] - YDev.Admin</title>
+    <title>@ViewData["Title"] - Admin</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Admin" name="description" />
