--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -77,8 +77,7 @@
 						<div class="row">
 							<div class="cell-5">
 							    <ul>
-								    <li><a href="#"><i class="fa fa-envelope"></i>info@it-rays.com
-</a></li>
+								    <li><a href="#"><i class="fa fa-envelope"></i>info@it-rays.com</a></li>
 								    <li><span><i class="fa fa-phone"></i> Call Us: +1 (888) 000-0000</span></li>
 							    </ul>
 							</div>
@@ -100,7 +99,7 @@
 				    <div class="container">
 					    <div class="row">
 					    	<div class="logo cell-3">
-						    	<a href="home.html"></a>
+						    	<a href="/"></a>
 						    </div>
 						    <div class="cell-9 top-menu">
 							    
@@ -343,10 +342,10 @@
 
 							    <form action="link-to-your-site" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="NL">
 							      <div class="skew-25 input-box left">
-						         		 <input type="email" value="" name="EMAIL" class="txt-box skew25" id="mce-EMAIL" placeholder="Enter Yor Email" required>
+						         		 <input type="email" value="" name="EMAIL" class="txt-box skew25" id="mce-EMAIL" placeholder="Email adresi girin" required>
 						          </div>
 						          <div class="left skew-25 NL-btn">
-						         		 <input type="submit" value="Send" name="subscribe" id="mc-embedded-subscribe" class="btn skew25">
+						         		 <input type="submit" value="Kaydet" name="subscribe" id="mc-embedded-subscribe" class="btn skew25">
 						          </div>
 						          <div class="hidden"><input type="text" name="name-of-the-hidden-field" value=""></div>
 
@@ -370,23 +369,21 @@
 				    <div class="container">
 			    		<div class="row">
 				    		<!-- footer copyrights left cell -->
-				    		<div class="copyrights cell-5">&copy; Copyrights <b>İhtyiaç Evim</b> 2020. <span>
-                                <!-- <a href="privacy.html">Privacy policy</a> | <a href="terms.html">Terms of use</a></span></div> -->
-				    		
-				    		<!-- footer social links right cell start -->
-						    <div class="cell-7">
-							    <ul class="social-list right">
-								    <li class="skew-25"><a href="#" data-title="facebook" data-tooltip="true"><span class="fa fa-facebook skew25"></span></a></li>
-                                    <li class="skew-25"><a href="#" data-title="instagram" data-tooltip="true"><span class="fa fa-instagram skew25"></span></a></li>
-								    <li class="skew-25"><a href="#" data-title="twitter" data-tooltip="true"><span class="fa fa-twitter skew25"></span></a></li>
-								    <li class="skew-25"><a href="#" data-title="YouTube" data-tooltip="true"><span class="fa fa-youtube skew25"></span></a></li>
-							    </ul>
-						    </div>
+							<div class="copyrights">
+								<span>&copy; İhtyiaç Evim 2020.</span>
+								<div class="cell-9">
+									<ul class="social-list right">
+										<li class="skew-25"><a href="#" data-title="facebook" data-tooltip="true"><span class="fa fa-facebook skew25"></span></a></li>
+										<li class="skew-25"><a href="#" data-title="instagram" data-tooltip="true"><span class="fa fa-instagram skew25"></span></a></li>
+										<li class="skew-25"><a href="#" data-title="twitter" data-tooltip="true"><span class="fa fa-twitter skew25"></span></a></li>
+										<li class="skew-25"><a href="#" data-title="YouTube" data-tooltip="true"><span class="fa fa-youtube skew25"></span></a></li>
+									</ul>
+								</div>
+							</div>
 						    <!-- footer social links right cell end -->
-						    
-			    		</div>
-				    </div>
-			    </div>
+						</div>
+					</div>
+				</div>
 			    <!-- footer bottom bar end -->
 			    
 		    </footer>
