--- a/YDev.Admin/Views/Content/Kategoriler.cshtml
+++ b/YDev.Admin/Views/Content/Kategoriler.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Blog Kategorileri";
+    ViewData["Title"] = "Kategoriler";
 }
 
 <!-- BEGIN CONTENT -->
@@ -12,7 +12,7 @@
             <div class="page-title">
                 <h1>
                     @ViewData["Title"]
-                    <small>kategori ekle, düzenle</small>
+                    <small>kategorileri düzenle</small>
                 </h1>
             </div>
             <!-- END PAGE TITLE -->
