--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -42,32 +44,6 @@
 	    
 	    <div class="pageWrapper">
 		    
-		       <!-- login box start -->
-			<div class="login-box">
-				<a class="close-login" href="#"><i class="fa fa-times"></i></a>
-				<form>
-					<div class="container">
-						<p>Hello our valued visitor, We present you the best web solutions and high quality graphic designs with a lot of features. just login to your account and enjoy ...</p>
-						<div class="login-controls">
-							<div class="skew-25 input-box left">
-								<input type="text" class="txt-box skew25" placeholder="User name Or Email" />
-							</div>
-							<div class="skew-25 input-box left">
-								<input type="password" class="txt-box skew25" placeholder="Password" />
-							</div>
-							<div class="left skew-25 main-bg">
-								<input type="submit" class="btn skew25" value="Login" />
-							</div>
-							<div class="check-box-box">
-								<input type="checkbox" class="check-box" /><label>Remember me !</label>
-								<a href="#">Forgot your password ?</a>
-							</div>
-						</div>
-					</div>
-				</form>
-			</div>
-			<!-- login box End -->
-
 			<!-- Header Start -->
 			<div id="headWrapper" class="clearfix">
 		    	
@@ -106,7 +82,8 @@
 							    <!-- top navigation menu start -->
 							    <nav class="top-nav">
 								    <ul>
-								      <li class="selected"><a href="#"><i class="fa fa-home"></i><span>Home</span></a>
+
+								      <li class="selected"><a href="#"><span>Home</span></a>
 									      <ul>
 										      <li class="selected"><a href="home.html">home 1</a></li>
 										      <li><a href="home2.html">home 2</a></li>
