--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -17,14 +17,28 @@
     <link href="~/assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/assets/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN PAGE LEVEL PLUGINS -->
     <link href="~/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css" />
     <link href="~/assets/global/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css" />
-    <link href="~/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" />
+    <link href="~/assets/global/plugins/bootstrap-toastr/toastr.min.css" rel="stylesheet" type="text/css" />
+
+    @if (nav.Contains("menu"))
+    {
+        <link href="~/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" />
+    }
+    @if (nav.Contains("content"))
+    {
+        <link href="~/assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
+        <link href="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
+    }
+    @if (nav.Contains("content"))
+    {
+        <link href="~/assets/global/plugins/bootstrap-summernote/summernote.css" rel="stylesheet" type="text/css" />
+        <link href="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" type="text/css" />
+    }
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="~/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
@@ -37,7 +51,7 @@
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
-    <!-- END HEAD -->
+<!-- END HEAD -->
 
 <body class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
     <!-- BEGIN HEADER -->
@@ -250,7 +264,26 @@
                             <span class="title">Slider Yönetimi</span>
                         </a>
                     </li>
-                    <li class='nav-item  @(nav.Contains("galeriler") ? "start open active" :"")'>
+                    <li class='nav-item  @(nav.Contains("content") ? "start open" :"")'>
+                        <a href="javascript:;" class="nav-link nav-toggle">
+                            <i class="icon-docs"></i>
+                            <span class="title">İçerik Yönetimi</span>
+                            <span class='arrow @(nav.Contains("content") ? "open" :"")'></span>
+                        </a>
+                        <ul class="sub-menu" style='display: @(nav.Contains("content") ? "block" :"none")'>
+                            <li class='nav-item  @(nav.Contains("kategoriler") ? "active" :"")'>
+                                <a href="/kategoriler" class="nav-link ">
+                                    <span class="title">Kategoriler</span>
+                                </a>
+                            </li>
+                            <li class='nav-item  @(nav.Contains("icerikler") ? "active" :"")'>
+                                <a href="/icerikler" class="nav-link ">
+                                    <span class="title">İçerikler</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class='nav-item  @(nav.Contains("galeriler") ? "start open" :"")'>
                         <a href="javascript:;" class="nav-link nav-toggle">
                             <i class="icon-layers"></i>
                             <span class="title">Medya Yönetimi</span>
@@ -269,31 +302,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li class='nav-item  @(nav.Contains("blog") ? "start open active" :"")'>
-                        <a href="javascript:;" class="nav-link nav-toggle">
-                            <i class="icon-docs"></i>
-                            <span class="title">Blog Yönetimi</span>
-                            <span class='arrow @(nav.Contains("blog") ? "open" :"")'></span>
-                        </a>
-                        <ul class="sub-menu" style='display: @(nav.Contains("blog") ? "block" :"none")'>
-                            <li class='nav-item  @(nav.Contains("kategoriler") ? "active" :"")'>
-                                <a href="/kategoriler" class="nav-link ">
-                                    <span class="title">Kategoriler</span>
-                                </a>
-                            </li>
-                            <li class='nav-item  @(nav.Contains("icerikler") ? "active" :"")'>
-                                <a href="/icerikler" class="nav-link ">
-                                    <span class="title">İçerikler</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class='nav-item @(nav.Contains("hakkimizda") ? "start active" :"")'>
-                        <a href="/hakkimizda" class="nav-link nav-toggle">
-                            <i class="icon-info"></i>
-                            <span class="title">Hakkımızda Sayfası</span>
-                        </a>
-                    </li>
                     <li class='nav-item @(nav.Contains("ietisim") ? "start active" :"")'>
                         <a href="/iletisim" class="nav-link nav-toggle">
                             <i class="icon-call-end"></i>
@@ -309,7 +317,7 @@
                     <li class="heading">
                         <h3 class="uppercase">Sistem</h3>
                     </li>
-                    <li class='nav-item  @(nav.Contains("banaozel") ? "start open active" :"")'>
+                    <li class='nav-item  @(nav.Contains("banaozel") ? "start open" :"")'>
                         <a href="javascript:;" class="nav-link nav-toggle">
                             <i class="icon-user"></i>
                             <span class="title">Bana Özel</span>
@@ -383,9 +391,6 @@
     <script src="~/assets/global/plugins/counterup/jquery.waypoints.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
 
-    <script src="~/assets/global/plugins/amcharts/ammap/ammap.js" type="text/javascript"></script>
-    <script src="~/assets/global/plugins/amcharts/ammap/maps/js/worldLow.js" type="text/javascript"></script>
-    <script src="~/assets/global/plugins/amcharts/amstockcharts/amstock.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/horizontal-timeline/horizontal-timeline.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/flot/jquery.flot.min.js" type="text/javascript"></script>
@@ -400,9 +405,8 @@
     <script src="~/assets/global/plugins/jqvmap/jqvmap/maps/jquery.vmap.germany.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/jqvmap/jqvmap/maps/jquery.vmap.usa.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/jqvmap/jqvmap/data/jquery.vmap.sampledata.js" type="text/javascript"></script>
-    <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
     <script src="~/assets/global/plugins/bootstrap-toastr/toastr.min.js" type="text/javascript"></script>
-    
+
 
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL SCRIPTS -->
@@ -410,7 +414,27 @@
     <!-- END THEME GLOBAL SCRIPTS -->
     <!-- BEGIN PAGE LEVEL SCRIPTS -->
     <script src="~/assets/pages/scripts/dashboard.min.js" type="text/javascript"></script>
-    <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
+
+    @if (nav.Contains("menu"))
+    {
+        <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
+        <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
+    }
+    @if (nav.Contains("content"))
+    {
+        <script src="~/assets/global/scripts/datatable.js" type="text/javascript"></script>
+        <script src="~/assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
+        <script src="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
+        <script src="~/assets/pages/scripts/table-datatables-managed.min.js" type="text/javascript"></script>
+    }
+    @if (nav.Contains("content"))
+    {
+        <script src="~/assets/global/plugins/bootstrap-summernote/summernote.min.js" type="text/javascript"></script>
+        <script src="~/assets/pages/scripts/components-editors.min.js" type="text/javascript"></script>
+        <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
+        <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
+    }
+
     <!-- END PAGE LEVEL SCRIPTS -->
     <!-- BEGIN THEME LAYOUT SCRIPTS -->
     <script src="~/assets/layouts/layout4/scripts/layout.min.js" type="text/javascript"></script>
