--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http;
+@{
     string nav = ViewData["Nav"] as string;
 }
 
@@ -196,12 +197,9 @@
                         <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
                         <li class="dropdown dropdown-user">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                <span class="username username-hide-on-mobile"> @UserInformation.Name </span>
+                                <span class="username username-hide-on-mobile"> @Context.Session.GetString("UserName") </span>
                                 <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
-                                @{
-                                    string avatar = string.IsNullOrEmpty(UserInformation.ImagePath) ? "../assets/layouts/layout4/img/avatar.png" : UserInformation.ImagePath;
-                                }
-                                <img alt="" class="img-circle" src=@avatar />
+                                <img alt="" class="img-circle" src=@Context.Session.GetString("ImagePath") />
                             </a>
                             <ul class="dropdown-menu dropdown-menu-default">
                                 <li>
@@ -426,12 +424,11 @@
         <script src="~/assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.js" type="text/javascript"></script>
         <script src="~/assets/pages/scripts/table-datatables-managed.min.js" type="text/javascript"></script>
-    }
-    @if (nav.Contains("content"))
-    {
+
         <script src="~/assets/global/plugins/bootstrap-summernote/summernote.min.js" type="text/javascript"></script>
         <script src="~/assets/pages/scripts/components-editors.min.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
+        <script src="~/assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
         <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
     }
 
