--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -86,10 +86,6 @@
 								      <li class="selected"><a href="#"><span>Home</span></a>
 									      <ul>
 										      <li class="selected"><a href="home.html">home 1</a></li>
-										      <li><a href="home2.html">home 2</a></li>
-										      <li><a href="home3.html">home 3</a></li>
-										      <li><a href="home4.html">home 4</a></li>
-										      <li><a href="home5.html">home 5</a></li>
 										      <li><a href="homenews.html">home news</a></li>
 										      <li><a href="#">Navigation</a>
 										      		<ul>
@@ -120,7 +116,7 @@
                                                 </li>
 									      </ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-gift"></i><span>Portfolio</span></a>
+								      <li><a href="#"><span>Portfolio</span></a>
 								      		<ul>
 										      <li><a href="portfolio-2-cols.html">Portfolio 2 columns</a></li>
 										      <li><a href="portfolio-3-cols.html">Portfolio 3 columns</a></li>
@@ -130,7 +126,7 @@
 										      <li><a href="portfolio-single2.html">Portfolio single 2</a></li>
 									      </ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-copy"></i><span>Pages</span></a>
+								      <li><a href="#"><span>Pages</span></a>
 								      		<ul>
 										      <li><a href="about-us.html">About us</a></li>
 										      <li><a href="about-me.html">About me</a></li>
@@ -152,7 +148,7 @@
 
 									      </ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-suitcase"></i><span>Shop</span></a>
+								      <li><a href="#"><span>Shop</span></a>
 								      		<ul>
 								      			<li><a href="#">Shop Products listing</a>
 							      					<ul>
@@ -172,7 +168,7 @@
 								      			<li><a href="check-out.html">Check out</a></li>
 								      		</ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-book"></i><span>Blog</span></a>
+								      <li><a href="#"><span>Blog</span></a>
 								      		<ul>
 										      <li><a href="#">Blog Large Image</a>
 										      		<ul>
@@ -205,7 +201,7 @@
 										      
 									      </ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-leaf"></i><span>Elements</span></a>
+								      <li><a href="#"><span>Elements</span></a>
 								      		<ul>
 										      <li><a href="columns.html">Columns</a></li>
 										      <li><a href="elements.html">Page Elements</a></li>
@@ -221,7 +217,7 @@
 										      <li><a href="font-icons.html">Icons</a></li>
 									      </ul>
 								      </li>
-								      <li><a href="#"><i class="fa fa-phone"></i><span>Contact</span></a>
+								      <li><a href="#"><span>Contact</span></a>
 								      	<ul>
 								      		<li><a href="contact.html">Contact 1</a></li>
 								      		<li><a href="contact.php">Contact 1 + PHP Captcha</a></li>
