--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -24,14 +24,7 @@
 		<link rel="stylesheet" href="rs-plugin/css/settings.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
-		<!--[if lt IE 9]>
-	    	<link rel="stylesheet" href="css/ie.css">
-	    	<script type="text/javascript" src="js/html5.js"></script>
-	    <![endif]-->
-
-
-		<!-- Skin style (** you can change the link below with the one you need from skins folder in the css folder **) -->
-		<link rel="stylesheet" href="css/skins/default.css">
+		<link rel="stylesheet" href="css/default.css">
 	
 	</head>
 	<body>
