--- a/YDev.Admin/Views/Menu/Index.cshtml
+++ b/YDev.Admin/Views/Menu/Index.cshtml
@@ -1,4 +1,5 @@
-@using  YDev.Common.Models
+@using YDev.Common.Models
+@using YDev.Common.Helper
 @{
     ViewData["Title"] = "Menü Yönetimi";
     List<Menu> menus = ViewData["Menus"] as List<Menu>;
