--- a/YDev.Web/wwwroot/css/default.css
+++ b/YDev.Web/wwwroot/css/default.css
@@ -10,7 +10,7 @@ a, .top-search a, .main-color, .hr-style4:after, .hr-style4:before, .block-head,
 .main-bg, .top-nav > ul li a:hover, .top-nav > ul > li.selected > a, .top-search.selected a, .top-nav li.current > a, .plan-year:after, .team-boxes-2 .cell-3:hover .team-box-2, .head-style3 .top-search a, .service-box-1:hover .box-top, .top-nav-style3, .sticky .top-nav > ul > li > a:hover, .item-box:hover .item-title, .tp-bullets.simplebullets.round .bullet, .top-nav li li a, .fixedHead .top-nav > ul > li > a:hover, .fixedHead .top-nav > ul > li.selected > a, .fixedHead .top-nav > ul > li.current > a, .top-search a:hover, .service-box-2:hover a.r-more, .service-box-3:hover a.r-more, .pager ul li.selected, .slick-prev:hover, .slick-next:hover, .hr-style1:before, .hr-style1:after, .social-list li a:hover, .footer-top .tags a:hover, hr:before, hr:after, .tp-arr-allwrapper:hover, .level-in, .tabs-vertical .tabs-pane .tab-panel:before, .table-style2 th, .menuBtn, .service-box-1:hover:after, .portfolio-item:hover:after, #filters li:hover, #filters li.active, .head-style2 .top-search a, .team-box .team-details, .title-4 h1, .tabs > ul li:hover, .tabs > ul li.active, .steps li.selected span, .icon-cont, .view-all-projects a:hover,
 .accordion-horizontal > li.active a, .list-grid a.selected, .testimonials-2 .slick-prev:hover, .testimonials-2 .slick-next:hover, .comment-reply:hover, .service-box-2:hover .fa, .service-box-3:hover .icon, .share-post ul li a:hover, .item-price, .accordion li.active h3 u, .pager ul li:hover, .tp-bullets.simplebullets.round .bullet:hover, .tp-bullets.simplebullets.round .bullet.selected, footer .NL .NL-btn:hover,
 .search-w .btn, .cart-icon, .sale, .flex-control-paging li a.flex-active, .responsive-one ul, .menuBtnOne, .service-box-4 a, .service-box-5 a, .block-head-News:hover .icon {
-	background-color: #dcae73;
+	background-color: #ffd80e;
 	color: #66000b;
 }
 .sale:before{
@@ -114,7 +114,7 @@ header.top-head .logo a {
 	border-left: 15px solid #66000b;
 }
 .continue-btn .btn.right:hover:after {
-	border-left: 15px solid #b8905c;
+	border-left: 15px solid #ffd80e;
 }
 .continue-btn .btn.left:after {
 	border-right: 15px solid #777;
@@ -137,7 +137,7 @@ header.top-head .logo a {
 	color:#fff
 }
 .btn.main-bg:hover, .team-box .team-socials li a {
-	background-color: #b8905c !important;
+	background-color: #ffd80e !important;
 	color: #fff;
 }
 .btn.main-border:hover {
